[gd_scene load_steps=20 format=2]

[ext_resource path="res://UI/LevelMenus/Resource/HTP.gd" type="Script" id=1]
[ext_resource path="res://UI/LevelMenus/Resource/PauseMenu.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/MovieTheaterFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/HUD/Resource/IMG/HTP_Control.png" type="Texture" id=4]
[ext_resource path="res://Resources/Fonts/ClassicArcadeFont.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=43]
size = 48
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=44]
size = 24
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=52]

[sub_resource type="StyleBoxEmpty" id=42]

[sub_resource type="StyleBoxTexture" id=49]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 800, 830 )

[sub_resource type="DynamicFont" id=50]
size = 60
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=53]
size = 18
extra_spacing_char = -1
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=54]

[sub_resource type="StyleBoxEmpty" id=55]

[sub_resource type="StyleBoxEmpty" id=56]

[sub_resource type="StyleBoxEmpty" id=57]

[sub_resource type="StyleBoxEmpty" id=58]

[sub_resource type="Animation" id=59]
resource_name = "HTP_Enlarge"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.70392, 45.8476 ), Vector2( -11.7146, 47.0333 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.303071, 0.425247 ), Vector2( 0.426207, 0.914171 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HTP_EnlargeButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -267.945, -156.514 ), Vector2( -365, -366 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HTP_EnlargeButton:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 544, 377 ), Vector2( 728, 743 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Title:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Button:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpriteName:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Label:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=60]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.70392, 45.8476 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.303071, 0.425247 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HTP_EnlargeButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -267.945, -156.514 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HTP_EnlargeButton:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 544, 377 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Title:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Button:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LeftButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RightButton:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpriteName:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Label:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="HTP" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 995.0 ]
}

[node name="HTPMain" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
light_mask = 0
position = Vector2( 956, 540 )
scale = Vector2( 2.3475, 1.26506 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="HTPMain"]
modulate = Color( 0, 0, 0, 1 )
light_mask = 0
margin_left = -220.66
margin_top = -336.743
margin_right = -58.6603
margin_bottom = -295.743
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 43 )
text = "HOWTOPLAY"
align = 1
valign = 1

[node name="Button" type="Button" parent="HTPMain"]
margin_left = -56.656
margin_top = 284.571
margin_right = -2.65601
margin_bottom = 303.571
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 44 )
custom_styles/pressed = SubResource( 52 )
custom_styles/normal = SubResource( 42 )
text = "RETURN"

[node name="LeftButton" type="Button" parent="HTPMain"]
margin_left = -342.492
margin_top = -24.5
margin_right = -314.492
margin_bottom = 73.5
custom_styles/normal = SubResource( 49 )
text = "<"

[node name="RightButton" type="Button" parent="HTPMain"]
margin_left = 318.211
margin_top = -24.5
margin_right = 346.211
margin_bottom = 73.5
custom_styles/normal = SubResource( 49 )
text = ">"

[node name="SpriteName" type="Label" parent="HTPMain"]
visible = false
margin_left = -181.896
margin_top = -208.686
margin_right = 217.104
margin_bottom = -155.686
custom_fonts/font = SubResource( 50 )
text = "SUPERLONGTITLEHERE"
align = 1
valign = 1

[node name="Label" type="Label" parent="HTPMain"]
margin_left = -59.2119
margin_top = 179.438
margin_right = 91.7881
margin_bottom = 197.438
custom_fonts/font = SubResource( 53 )
text = "PRESS TO ENLARGE"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="HTPMain"]
position = Vector2( 1.70392, 45.8476 )
scale = Vector2( 0.303071, 0.425247 )
texture = ExtResource( 4 )

[node name="HTP_EnlargeButton" type="Button" parent="HTPMain"]
margin_left = -267.945
margin_top = -156.514
margin_right = 276.055
margin_bottom = 220.486
custom_styles/hover = SubResource( 54 )
custom_styles/pressed = SubResource( 55 )
custom_styles/focus = SubResource( 56 )
custom_styles/disabled = SubResource( 57 )
custom_styles/normal = SubResource( 58 )
toggle_mode = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HTPMain"]
anims/HTP_Enlarge = SubResource( 59 )
anims/RESET = SubResource( 60 )

[node name="Background" type="Polygon2D" parent="."]
show_behind_parent = true
position = Vector2( -6, 0 )
color = Color( 0.223529, 0.223529, 0.223529, 0.905882 )
polygon = PoolVector2Array( -6, -5, 1953, -13, 1939, 1096, -13, 1098 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="HTPMain/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HTPMain/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="HTPMain/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="toggled" from="HTPMain/HTP_EnlargeButton" to="." method="_on_HTP_EnlargeButton_toggled"]
